--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,11 @@
 <groupId>org.webjars</groupId>
 <artifactId>eslint</artifactId>
 <version>0.5.1</version>
+<dependency>
+ <groupId>com.h3xstream.findsecbugs</groupId>
+ <artifactId>findsecbugs-plugin</artifactId>
+ <version>1.9.0</version>
 </dependency>
-</dependencies>
 
 <build>
 <plugins>
