--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,17 @@
 <groupId>org.webjars</groupId>
 <artifactId>eslint</artifactId>
 <version>0.5.1</version>
+<dependency>
+ <groupId>com.h3xstream.findsecbugs</groupId>
+ <artifactId>findsecbugs-plugin</artifactId>
+ <version>1.9.0</version>
 </dependency>
-</dependencies>
-
+<dependency>
+ <groupId>junit</groupId>
+ <artifactId>junit</artifactId>
+ <version>3.8.1</version>
+ <scope>test</scope>
+</dependency>
 <build>
 <plugins>
 <plugin>
